--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -8,7 +8,7 @@
           <p class="text-secondary">{{ current_user.email }}</p>
         </div>
       </div>
-    <!-- Form Here -->
+    <!-- Form will be placed here -->
     </div>
     
 
